--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "play-with-rabbitmq",
   "version": "1.0.0",
-  "description": "",
+  "description": "Playing with RabbitMQ",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -19,5 +20,8 @@
   "bugs": {
     "url": "https://github.com/hanlinkhaing/play-with-rabbitmq/issues"
   },
-  "homepage": "https://github.com/hanlinkhaing/play-with-rabbitmq#readme"
+  "homepage": "https://github.com/hanlinkhaing/play-with-rabbitmq#readme",
+  "dependencies": {
+    "amqplib": "^0.10.3"
+  }
 }
