modify and clean

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-RBMQ_HOST=165.22.100.157
+RBMQ_HOST=localhost
 RBMQ_PORT=5672
-RBMQ_USER=root
-RBMQ_PASS=RootPwd
+RBMQ_USER=local
+RBMQ_PASS=localpass
